# SE-AutomacaoPredial

./: CMakeLists.txt  LICENSE  README.md
firmware/common/: behavior.c  behavior.h  chrono.c  chrono.h  hal.h  sm.h  sm1.c  sm1.h  sm2.c  sm2.h  sm3.c  sm3.h  sm4.c  sm4.h
firmware/x86_archLinux_qt_gui/: CMakeLists.txt
firmware/x86_archLinux_qt_gui/AP/: ap.pro  cedatank.cpp  cedatank.h  hal.c  led.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadbehavior.cpp  threadbehavior.h
